--- a/src/components/TreeBar/treebar.css
+++ b/src/components/TreeBar/treebar.css
@@ -1,4 +1,31 @@
-.testcss {
-    color: #30c0ad;
-    background-color: black
-}
+.trigger {
+    margin-left: 2px;
+    font-size: 18px;
+    line-height: 64px;
+    text-align: left;
+    padding: 0 24px;
+    cursor: pointer;
+    transition: color .3s;
+  }
+  
+  .trigger:hover {
+    color: #1890ff;
+  }
+  
+  .logo {
+    height: 32px;
+    background: rgba(255,255,255,.2);
+    margin: 16px;
+  }
+  .slider{
+      float: right;
+      width: 4px;
+      height: 100%;
+      cursor: w-resize;
+  }
+  .siderwraper{
+      float: left
+  }
+  .slider:drag-over{
+      cursor: w-resize;
+  }
