--- a/src/views/Home/home.css
+++ b/src/views/Home/home.css
@@ -11,10 +11,12 @@
     height: 620px;
 }
 .sider{
-    width: 30%;
+    width: 100%;
     height: 620px;
+    float: left;
 }
 .chart{
     width: 60%;
     height: 620px;
+    float: left;
 }
